@@ -199,3 +199,5 @@
         - number -> vector_number
   * #19490 with inverted fileversion and filenumber
   * #19493 issue with the extra byte read on binary files
+* Known issue(s):
+  * #21295 - Migrations for Oracle and automated table generation not working
